# job-os

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
agents/: __init__.py
agents/analytics/: __init__.py
agents/ats/: __init__.py  agent.py  scoring.py  skills.py
agents/browser/: __init__.py
agents/cover_letter/: __init__.py  agent.py
agents/discovery/: __init__.py  agent.py
agents/discovery/adapters/: __init__.py  base.py  exa.py  manual.py
agents/tailoring/: __init__.py  agent.py
agents/tracking/: __init__.py
backend/: __init__.py  main.py
backend/api/: __init__.py  applications.py  approvals.py  cover_letters.py  deps.py  discovery.py  errors.py  jobs.py  resumes.py  router.py  schemas.py  scoring.py  system.py  tailoring.py
backend/api/schemas/: __init__.py  applications.py  approvals.py  common.py  cover_letters.py  discovery.py  jobs.py  resumes.py  scoring.py  system.py  tailoring.py
core/: __init__.py  config.py  exceptions.py  logging.py  paths.py
core/applications/: __init__.py  approval.py  service.py
core/automation/: __init__.py
core/database/: __init__.py  base.py  crud.py  engine.py  enums.py  models.py
core/documents/: __init__.py  render.py
core/embeddings/: __init__.py  embedder.py  store.py
core/jobs/: __init__.py  dedup.py  service.py
core/llm/: __init__.py  client.py  usage.py
core/resumes/: __init__.py  service.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/applications/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/resumes/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/hooks/: use-applications.ts  use-jobs.ts  use-resumes.ts
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/src/store/: ui.ts
migrations/: env.py  script.py.mako
migrations/versions/: c77dce9645d7_initial_schema.py
scripts/: dev.ps1  test.ps1
tests/: conftest.py  test_applications_api.py  test_approvals.py  test_ats_scoring.py  test_config.py  test_cover_letter.py  test_database.py  test_discovery.py  test_discovery_api.py  test_documents.py  test_jobs_api.py  test_llm.py  test_resumes_api.py  test_scoring_api.py  test_system_api.py  test_tailoring.py  test_tailoring_api.py  test_tracker_api.py
(+3 files in other folders)
