[project]
name = "job-os"
version = "0.1.0"
description = "Local-first, single-user AI Job OS — discover, tailor, track, and apply to jobs with local LLMs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Rishit Singh" }]

dependencies = [
    # --- Web / API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # --- Config & settings ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    # --- Database (Phase 2) ---
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.0",
    "alembic>=1.14.0",
    # --- Structured logging ---
    "structlog>=24.4.0",
    # --- LLM / HTTP (Phase 5+) ---
    "httpx>=0.27.0",
    # --- Document processing (Phase 6+) ---
    "python-docx>=1.1.2",
    "reportlab>=4.2.5",
    "pdfplumber>=0.11.4",
    "pypdf>=5.1.0",
    # --- Background scheduling (Phase 9+) ---
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
# Heavy / phase-specific deps live in extras so the core app installs fast.
# Vector store (Phase 5): `uv sync --extra embeddings`
embeddings = [
    "chromadb>=0.5.20",
]
# Browser automation (Phase 9): `uv sync --extra browser`
browser = [
    "playwright>=1.48.0",
    "browser-use>=0.1.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Modular monolith: three importable top-level packages, one process.
packages = ["backend", "core", "agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend", "core", "agents", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TID"]
ignore = ["B008"]  # FastAPI uses function calls in argument defaults (Depends, etc.)

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
